WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133101
Scrolling pages with large TiledBacking content layers creates way too many tiles
https://bugs.webkit.org/show_bug.cgi?id=133101
Summary
Scrolling pages with large TiledBacking content layers creates way too many t...
Simon Fraser (smfr)
Reported
2014-05-19 18:16:55 PDT
Scrolling pages with large TiledBacking content layers creates way too many tiles
Attachments
Patch
(4.01 KB, patch)
2014-05-19 18:36 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-19 18:36:01 PDT
Created
attachment 231746
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-19 19:33:05 PDT
http://trac.webkit.org/changeset/169097
Simon Fraser (smfr)
Comment 3
2014-05-20 20:17:15 PDT
<
rdar://problem/16412707
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug