Scrolling pages with large TiledBacking content layers creates way too many tiles https://bugs.webkit.org/show_bug.cgi?id=133101

Reviewed by Tim Horton.

Fix the GraphicsLayerCA::adjustTiledLayerVisibleRect() logic to avoid making giant rects if the old
and new visible rects don't overlap.

* platform/graphics/TiledBacking.h:
* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::adjustTiledLayerVisibleRect):
* platform/graphics/ca/mac/TileController.h:

Canonical link: https://commits.webkit.org/151129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169097 268f45cc-cd09-0410-ab3c-d52691b4dbfc